--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -11,11 +11,11 @@ set -g remain-on-exit off
 set -g repeat-time 300
 setw -g allow-rename off
 setw -g automatic-rename off
-setw -g aggressive-resize on
+#setw -g aggressive-resize on
 
 # Change prefix key to C-a, easier to type, same to "screen"
-unbind C-b
-set -g prefix C-a
+#unbind C-b
+#set -g prefix C-a
 
 # Set parent terminal title to reflect current window in tmux session 
 set -g set-titles on
@@ -26,7 +26,7 @@ set -g base-index 1
 setw -g pane-base-index 1
 
 # Enable mouse support
-set -g mouse on
+set -g mouse off
 
 
 # ==========================
@@ -38,8 +38,8 @@ unbind "\$" # rename-session
 unbind ,    # rename-window
 unbind %    # split-window -h
 unbind '"'  # split-window
-unbind }    # swap-pane -D
-unbind {    # swap-pane -U
+unbind \}    # swap-pane -D
+unbind \{    # swap-pane -U
 unbind [    # paste-buffer
 unbind ]    
 unbind "'"  # select-window
@@ -52,7 +52,7 @@ unbind o    # focus thru panes
 unbind &    # kill-window
 unbind "#"  # list-buffer 
 unbind =    # choose-buffer
-unbind z    # zoom-pane
+#unbind z    # zoom-pane
 unbind M-Up  # resize 5 rows up
 unbind M-Down # resize 5 rows down
 unbind M-Right # resize 5 rows right
@@ -60,10 +60,10 @@ unbind M-Left # resize 5 rows left
 
 
 # Edit configuration and reload
-bind C-e new-window -n 'tmux.conf' "sh -c '\${EDITOR:-vim} ~/.tmux.conf && tmux source ~/.tmux.conf && tmux display \"Config reloaded\"'"
+#bind C-e new-window -n 'tmux.conf' "sh -c '\${EDITOR:-vim} ~/.tmux.conf && tmux source ~/.tmux.conf && tmux display \"Config reloaded\"'"
 
 # Reload tmux configuration 
-bind C-r source-file ~/.tmux.conf \; display "Config reloaded"
+#bind C-r source-file ~/.tmux.conf \; display "Config reloaded"
 
 # new window and retain cwd
 bind c new-window -c "#{pane_current_path}"
@@ -76,16 +76,16 @@ bind r command-prompt -I "#{window_name}" "rename-window '%%'"
 bind R command-prompt -I "#{session_name}" "rename-session '%%'"
 
 # Split panes
-bind | split-window -h -c "#{pane_current_path}"
-bind _ split-window -v -c "#{pane_current_path}"
+bind \\ split-window -h -c "#{pane_current_path}"
+bind - split-window -v -c "#{pane_current_path}"
 
 # Select pane and windows
-bind -r C-[ previous-window
-bind -r C-] next-window
-bind -r [ select-pane -t :.-
-bind -r ] select-pane -t :.+
+bind -r , previous-window
+bind -r . next-window
+#bind -r [ select-pane -t :.-
+#bind -r ] select-pane -t :.+
 bind -r Tab last-window   # cycle thru MRU tabs
-bind -r C-o swap-pane -D
+bind -r [ swap-pane -D
 
 # Zoom pane
 bind + resize-pane -Z
@@ -95,7 +95,7 @@ bind L command-prompt -p "Link window from (session:window): " "link-window -s %
 
 # Swap panes back and forth with 1st pane
 # When in main-(horizontal|vertical) layouts, the biggest/widest panel is always @1
-bind \ if '[ #{pane_index} -eq 1 ]' \
+bind \\ if '[ #{pane_index} -eq 1 ]' \
      'swap-pane -s "!"' \
      'select-pane -t:.1 ; swap-pane -d -t 1 -s "!"'
 
@@ -247,7 +247,7 @@ separator_powerline_right=""
 # setw -g window-status-style "fg=$color_status_text,bg=$color_dark"
 setw -g window-status-format " #I:#W "
 setw -g window-status-current-style "fg=$color_light,bold,bg=$color_main"
-setw -g window-status-current-format "#[fg=$color_dark,bg=$color_main]$separator_powerline_right#[default] #I:#W# #[fg=$color_main,bg=$color_dark]$separator_powerline_right#[default]"
+setw -g window-status-current-format "#[fg=$color_dark,bg=$color_main]$separator_powerline_right#[fg=$color_light] #I:#W# #[fg=$color_main,bg=$color_dark]$separator_powerline_right#[default]"
 
 # when window has monitoring notification
 setw -g window-status-activity-style "fg=$color_main"
@@ -309,76 +309,3 @@ set -g @prefix_highlight_fg "$color_dark"
 set -g @prefix_highlight_bg "$color_secondary"
 set -g @prefix_highlight_show_copy_mode 'on'
 set -g @prefix_highlight_copy_mode_attr "fg=$color_dark,bg=$color_secondary"
-
-
-# =====================================
-# ===        Renew environment      ===
-# =====================================
-set -g update-environment \
-  "DISPLAY\
-  SSH_ASKPASS\
-  SSH_AUTH_SOCK\
-  SSH_AGENT_PID\
-  SSH_CONNECTION\
-  SSH_TTY\
-  WINDOWID\
-  XAUTHORITY"
-
-bind '$' run "~/.tmux/renew_env.sh"
-
-
-# ============================
-# ===       Plugins        ===
-# ============================
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-battery'
-set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
-set -g @plugin 'tmux-plugins/tmux-online-status'
-set -g @plugin 'tmux-plugins/tmux-sidebar'
-set -g @plugin 'tmux-plugins/tmux-copycat'
-set -g @plugin 'tmux-plugins/tmux-open'
-set -g @plugin 'samoshkin/tmux-plugin-sysstat'
-
-# Plugin properties
-set -g @sidebar-tree 't'
-set -g @sidebar-tree-focus 'T'
-set -g @sidebar-tree-command 'tree -C'
-
-set -g @open-S 'https://www.google.com/search?q='
-
-
-# ==============================================
-# ===   Nesting local and remote sessions     ===
-# ==============================================
-
-# Session is considered to be remote when we ssh into host
-if-shell 'test -n "$SSH_CLIENT"' \
-    'source-file ~/.tmux/tmux.remote.conf'
-
-# We want to have single prefix key "C-a", usable both for local and remote session
-# we don't want to "C-a" + "a" approach either
-# Idea is to turn off all key bindings and prefix handling on local session,
-# so that all keystrokes are passed to inner/remote session
-
-# see: toggle on/off all keybindings · Issue #237 · tmux/tmux - https://github.com/tmux/tmux/issues/237
-
-# Also, change some visual styles when window keys are off
-bind -T root F12  \
-    set prefix None \;\
-    set key-table off \;\
-    set status-style "fg=$color_status_text,bg=$color_window_off_status_bg" \;\
-    set window-status-current-format "#[fg=$color_window_off_status_bg,bg=$color_window_off_status_current_bg]$separator_powerline_right#[default] #I:#W# #[fg=$color_window_off_status_current_bg,bg=$color_window_off_status_bg]$separator_powerline_right#[default]" \;\
-    set window-status-current-style "fg=$color_dark,bold,bg=$color_window_off_status_current_bg" \;\
-    if -F '#{pane_in_mode}' 'send-keys -X cancel' \;\
-    refresh-client -S \;\
-
-bind -T off F12 \
-  set -u prefix \;\
-  set -u key-table \;\
-  set -u status-style \;\
-  set -u window-status-current-style \;\
-  set -u window-status-current-format \;\
-  refresh-client -S
-
-# Run all plugins' scripts
-run '~/.tmux/plugins/tpm/tpm'
