--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -57,6 +57,7 @@ unbind M-Up  # resize 5 rows up
 unbind M-Down # resize 5 rows down
 unbind M-Right # resize 5 rows right
 unbind M-Left # resize 5 rows left
+unbind s # unbind select new session interactively
 
 
 # Edit configuration and reload
@@ -84,8 +85,13 @@ bind -r , previous-window
 bind -r . next-window
 #bind -r [ select-pane -t :.-
 #bind -r ] select-pane -t :.+
+# Select left pane and right pane
+bind -r h select-pane -L 
+bind -r l select-pane -R 
+bind -r j select-pane -D 
+bind -r k select-pane -U 
 bind -r Tab last-window   # cycle thru MRU tabs
-bind -r [ swap-pane -D
+bind -r s swap-pane -D
 
 # Zoom pane
 bind + resize-pane -Z
